Bug 632027 - comma expressions in array literals are discarded. r=jorendorff